--- a/about/index.html
+++ b/about/index.html
@@ -18,7 +18,7 @@
 
 
 
-<link rel="stylesheet" href="/re9ulus.github.io/css/ui.css">
+<link rel="stylesheet" href="/css/ui.css">
 
 	
 		
@@ -36,7 +36,7 @@
 			<a href="/">
 				<img class="icon-text" src="/img/prev.svg"/>
 			</a>
-		</li><li><a href="re9ulus.github.io/about">About</a></li><li><a href="re9ulus.github.io/post/">Posts</a></li></ul>
+		</li><li><a href="/about">About</a></li><li><a href="/post/">Posts</a></li></ul>
 </nav>
 
 	</div>
